fix: correção de diretorios

--- a/graph.html
+++ b/graph.html
@@ -137,47 +137,297 @@
     graph = `digraph  {
 0 [class="start active", fillcolor=green, fontsize=12, label=START, style=filled];
 "-1" [class=end, fillcolor=red, fontsize=12, label=END, style=filled];
-1 [class="", fontsize=12, label=utter_greet];
-2 [class="", fontsize=12, label=utter_happy];
-4 [class="", fontsize=12, label=utter_cheer_up];
-5 [class="", fontsize=12, label=utter_did_that_help];
-10 [class="", fontsize=12, label=utter_goodbye];
-11 [class="", fontsize=12, label=utter_nirvana];
-12 [class="", fontsize=12, label="..."];
-15 [class="", fontsize=12, label=utter_iamabot];
-18 [class=intent, fillcolor=lightblue, label=goodmorning, shape=rect, style=filled];
-19 [class=intent, fillcolor=lightblue, label="what is nirvana?", shape=rect, style=filled];
-20 [class=intent, fillcolor=lightblue, label=wonderful, shape=rect, style=filled];
-21 [class=intent, fillcolor=lightblue, label=unhappy, shape=rect, style=filled];
-22 [class=intent, fillcolor=lightblue, label="of course", shape=rect, style=filled];
-23 [class=intent, fillcolor=lightblue, label=no, shape=rect, style=filled];
-24 [class=intent, fillcolor=lightblue, label="good by", shape=rect, style=filled];
-25 [class=intent, fillcolor=lightblue, label="are you a human?", shape=rect, style=filled];
-26 [class=intent, fillcolor=lightblue, label="what is nirvana?", shape=rect, style=filled];
-0 -> 12  [class="", key=NONE, label=""];
-0 -> 18  [class="", key=0];
-0 -> 19  [class="", key=0];
-1 -> 20  [class="", key=0];
-1 -> 21  [class="", key=0];
+1 [class="", fontsize=12, label=utter_na_ufc_tem_nutricionista];
+2 [class="", fontsize=12, label=utter_qual_contato_nutricao];
+3 [class="", fontsize=12, label=utter_na_ufc_tem_psicologa];
+4 [class="", fontsize=12, label=utter_qual_contato_psicologa];
+5 [class="", fontsize=12, label="..."];
+6 [class="", fontsize=12, label=action_como_funciona_auxilio];
+8 [class="", fontsize=12, label=utter_cursos_ufc];
+10 [class="", fontsize=12, label=utter_cursos_rep_dd];
+12 [class="", fontsize=12, label=utter_cursos_rep_es];
+14 [class="", fontsize=12, label=utter_cursos_rep_cc];
+16 [class="", fontsize=12, label=utter_cursos_rep_ec];
+18 [class="", fontsize=12, label=utter_cursos_rep_si];
+20 [class="", fontsize=12, label=utter_cursos_rep_redes];
+22 [class="", fontsize=12, label=utter_cursos_site_dd];
+24 [class="", fontsize=12, label=utter_cursos_site_es];
+26 [class="", fontsize=12, label=utter_quais_servicos_ufc];
+28 [class="", fontsize=12, label=utter_cursos_site_cc];
+30 [class="", fontsize=12, label=utter_cursos_site_ec];
+32 [class="", fontsize=12, label=utter_cursos_site_si];
+34 [class="", fontsize=12, label=utter_cursos_site_redes];
+36 [class="", fontsize=12, label=utter_horas_complementares];
+38 [class="", fontsize=12, label=utter_localidade_campus];
+40 [class="", fontsize=12, label=utter_localidade_convivencia];
+42 [class="", fontsize=12, label=utter_localidade_restaurante];
+44 [class="", fontsize=12, label=utter_localidade_blocos];
+46 [class="", fontsize=12, label=utter_localidade_biblioteca];
+50 [class="", fontsize=12, label=utter_o_que_e_o_pet];
+52 [class="", fontsize=12, label=utter_qual_o_site_do_pet];
+54 [class="", fontsize=12, label=utter_o_que_e_o_inove];
+56 [class="", fontsize=12, label=utter_o_que_e_o_pacce];
+58 [class="", fontsize=12, label=utter_o_que_e_o_poa];
+60 [class="", fontsize=12, label=utter_quais_os_projetos_ufc_quixada];
+62 [class="", fontsize=12, label=utter_saudacao];
+64 [class="", fontsize=12, label=utter_despedida];
+66 [class="", fontsize=12, label=utter_soubot];
+68 [class="", fontsize=12, label=utter_quais_sistemas_ufc];
+70 [class="", fontsize=12, label=utter_na_ufc_tem_nutricionista];
+72 [class="", fontsize=12, label=utter_saber_matricula];
+74 [class="", fontsize=12, label=utter_quais_disciplinas_matriculado];
+76 [class="", fontsize=12, label=utter_como_cadastrar_horas_complementares];
+78 [class="", fontsize=12, label=utter_oque_e_sigaa];
+80 [class="", fontsize=12, label=utter_oque_e_sippa];
+82 [class="", fontsize=12, label=utter_oque_e_moodle];
+84 [class="", fontsize=12, label=utter_oque_e_pergamum];
+86 [class="", fontsize=12, label=utter_oque_e_prae];
+88 [class="", fontsize=12, label=utter_qual_site_biblioteca];
+90 [class="", fontsize=12, label=utter_como_reservar_sala];
+94 [class="", fontsize=12, label=utter_como_criar_email_institucional];
+96 [class="", fontsize=12, label=utter_qual_site_sigaa];
+98 [class="", fontsize=12, label=utter_qual_site_sippa];
+100 [class="", fontsize=12, label=utter_qual_site_moodle];
+102 [class="", fontsize=12, label=utter_qual_site_pergamum];
+104 [class="", fontsize=12, label=utter_qual_site_prae];
+106 [class="", fontsize=12, label=utter_na_ufc_tem_psicologa];
+108 [class="", fontsize=12, label=utter_qual_contato_servico_social];
+110 [class="", fontsize=12, label=utter_a_quem_buscar_ajuda];
+112 [class="", fontsize=12, label=utter_qual_contato_secretaria_academica];
+114 [class="", fontsize=12, label=utter_como_conseguir_bolsa];
+115 [class=intent, fillcolor=lightblue, label="na UFC tem nutricionista?", shape=rect, style=filled];
+116 [class=intent, fillcolor=lightblue, label="A UFC tem psicóloga para os estudantes?", shape=rect, style=filled];
+117 [class=intent, fillcolor=lightblue, label="Qual é o email para falar com o setor?", shape=rect, style=filled];
+118 [class=intent, fillcolor=lightblue, label="Qual o email de contato?", shape=rect, style=filled];
+119 [class=intent, fillcolor=lightblue, label="Como funciona o aux emergencial", shape=rect, style=filled];
+120 [class=intent, fillcolor=lightblue, label="Como encontrar os cursos da UFC de Quixadá", shape=rect, style=filled];
+121 [class=intent, fillcolor=lightblue, label="Quais cadeiras não devo deixar de passar em Design Digital", shape=rect, style=filled];
+122 [class=intent, fillcolor=lightblue, label="Quais disciplinas não devo reprovar em Engenharia de Software", shape=rect, style=filled];
+123 [class=intent, fillcolor=lightblue, label="O que não reprovar em CC", shape=rect, style=filled];
+124 [class=intent, fillcolor=lightblue, label="Quais cadeiras não posso reprovar em EC", shape=rect, style=filled];
+125 [class=intent, fillcolor=lightblue, label="Quais matérias não devo tirar nota baixa em SI", shape=rect, style=filled];
+126 [class=intent, fillcolor=lightblue, label="Quais matérias não devo tirar nota baixa em redes", shape=rect, style=filled];
+127 [class=intent, fillcolor=lightblue, label="Onde posso encontrar informações sobre o curso de DD online", shape=rect, style=filled];
+128 [class=intent, fillcolor=lightblue, label="Qual é o site do curso de Engenharia de Software", shape=rect, style=filled];
+129 [class=intent, fillcolor=lightblue, label="Quais serviços a UFC tem para os estudantes?", shape=rect, style=filled];
+130 [class=intent, fillcolor=lightblue, label="Onde encontro o site do curso de CC", shape=rect, style=filled];
+131 [class=intent, fillcolor=lightblue, label="Onde é o site oficial do curso de EC", shape=rect, style=filled];
+132 [class=intent, fillcolor=lightblue, label="Existe um site do curso de Sistemas de Informação", shape=rect, style=filled];
+133 [class=intent, fillcolor=lightblue, label="Qual é o site oficial do curso de Redes", shape=rect, style=filled];
+134 [class=intent, fillcolor=lightblue, label="Para que servem as horas complementares", shape=rect, style=filled];
+135 [class=intent, fillcolor=lightblue, label="Onde está localizado fisicamente o Campus da UFC em Quixadá", shape=rect, style=filled];
+136 [class=intent, fillcolor=lightblue, label="Onde está situada a Área de Convivência", shape=rect, style=filled];
+137 [class=intent, fillcolor=lightblue, label="Onde fica o restaurante da UFC em Quixadá", shape=rect, style=filled];
+138 [class=intent, fillcolor=lightblue, label="Onde fica o bloco 4", shape=rect, style=filled];
+139 [class=intent, fillcolor=lightblue, label="Onde está a biblioteca no campus", shape=rect, style=filled];
+140 [class=intent, fillcolor=lightblue, label="Como entro em contato com a nutricionista?", shape=rect, style=filled];
+141 [class=intent, fillcolor=lightblue, label="PET é o que", shape=rect, style=filled];
+142 [class=intent, fillcolor=lightblue, label="onde encontro o site do PET", shape=rect, style=filled];
+143 [class=intent, fillcolor=lightblue, label="INOVE, o que é isso", shape=rect, style=filled];
+144 [class=intent, fillcolor=lightblue, label="como funciona o PACCE", shape=rect, style=filled];
+145 [class=intent, fillcolor=lightblue, label="como funciona o POA", shape=rect, style=filled];
+146 [class=intent, fillcolor=lightblue, label="quais projetos existem na UFC Quixadá", shape=rect, style=filled];
+147 [class=intent, fillcolor=lightblue, label="Bom dia", shape=rect, style=filled];
+148 [class=intent, fillcolor=lightblue, label="ate mais", shape=rect, style=filled];
+149 [class=intent, fillcolor=lightblue, label="voce é um robo?", shape=rect, style=filled];
+150 [class=intent, fillcolor=lightblue, label="Como a UFC gerencia seus sistemas", shape=rect, style=filled];
+151 [class=intent, fillcolor=lightblue, label="A universidade oferece acompanhamento nutricional?", shape=rect, style=filled];
+152 [class=intent, fillcolor=lightblue, label="Como acessar minha matrícula", shape=rect, style=filled];
+153 [class=intent, fillcolor=lightblue, label="Quais disciplinas estou matriculado", shape=rect, style=filled];
+154 [class=intent, fillcolor=lightblue, label="Onde posso registrar minhas horas complementares", shape=rect, style=filled];
+155 [class=intent, fillcolor=lightblue, label="Como acessar o SIGAA", shape=rect, style=filled];
+156 [class=intent, fillcolor=lightblue, label="Qual o objetivo do SIPPA na UFC", shape=rect, style=filled];
+157 [class=intent, fillcolor=lightblue, label="O que é o Moodle", shape=rect, style=filled];
+158 [class=intent, fillcolor=lightblue, label="Como funciona o Pergamum", shape=rect, style=filled];
+159 [class=intent, fillcolor=lightblue, label="Como o PRAE pode me ajudar", shape=rect, style=filled];
+160 [class=intent, fillcolor=lightblue, label="Como faço para acessar os recursos da biblioteca online", shape=rect, style=filled];
+161 [class=intent, fillcolor=lightblue, label="Como faço para reservar uma sala", shape=rect, style=filled];
+162 [class=intent, fillcolor=lightblue, label="Como entro em contato com a psicologia?", shape=rect, style=filled];
+163 [class=intent, fillcolor=lightblue, label="Qual é o procedimento para ter um email institucional", shape=rect, style=filled];
+164 [class=intent, fillcolor=lightblue, label="Onde está o site do SIGAA?", shape=rect, style=filled];
+165 [class=intent, fillcolor=lightblue, label="Onde encontro o site do SIPPA?", shape=rect, style=filled];
+166 [class=intent, fillcolor=lightblue, label="Onde encontro o site do Moodle?", shape=rect, style=filled];
+167 [class=intent, fillcolor=lightblue, label="Qual é o endereço do Pergamum?", shape=rect, style=filled];
+168 [class=intent, fillcolor=lightblue, label="Qual é o endereço do PRAE?", shape=rect, style=filled];
+169 [class=intent, fillcolor=lightblue, label="Onde posso obter apoio psicológico na UFC?", shape=rect, style=filled];
+170 [class=intent, fillcolor=lightblue, label="Qual o número para falar com o serviço social?", shape=rect, style=filled];
+171 [class=intent, fillcolor=lightblue, label="Onde posso obter apoio para melhorar meu rendimento acadêmico?", shape=rect, style=filled];
+172 [class=intent, fillcolor=lightblue, label="Como fazer contato com a SA da UFC?", shape=rect, style=filled];
+173 [class=intent, fillcolor=lightblue, label="Como consigo o auxilio moradia", shape=rect, style=filled];
+0 -> 5  [class="", key=NONE, label=""];
+0 -> 115  [class="", key=0];
+0 -> 116  [class="", key=0];
+1 -> 117  [class="", key=0];
 2 -> "-1"  [class="", key=NONE, label=""];
-4 -> 5  [class="", key=NONE, label=""];
-5 -> 22  [class="", key=0];
-5 -> 23  [class="", key=0];
+3 -> 118  [class="", key=0];
+4 -> "-1"  [class="", key=NONE, label=""];
+5 -> 119  [class="", key=0];
+5 -> 120  [class="", key=0];
+5 -> 121  [class="", key=0];
+5 -> 122  [class="", key=0];
+5 -> 123  [class="", key=0];
+5 -> 124  [class="", key=0];
+5 -> 125  [class="", key=0];
+5 -> 126  [class="", key=0];
+5 -> 127  [class="", key=0];
+5 -> 128  [class="", key=0];
+5 -> 129  [class="", key=0];
+5 -> 130  [class="", key=0];
+5 -> 131  [class="", key=0];
+5 -> 132  [class="", key=0];
+5 -> 133  [class="", key=0];
+5 -> 134  [class="", key=0];
+5 -> 135  [class="", key=0];
+5 -> 136  [class="", key=0];
+5 -> 137  [class="", key=0];
+5 -> 138  [class="", key=0];
+5 -> 139  [class="", key=0];
+5 -> 140  [class="", key=0];
+5 -> 141  [class="", key=0];
+5 -> 142  [class="", key=0];
+5 -> 143  [class="", key=0];
+5 -> 144  [class="", key=0];
+5 -> 145  [class="", key=0];
+5 -> 146  [class="", key=0];
+5 -> 147  [class="", key=0];
+5 -> 148  [class="", key=0];
+5 -> 149  [class="", key=0];
+5 -> 150  [class="", key=0];
+5 -> 151  [class="", key=0];
+5 -> 152  [class="", key=0];
+5 -> 153  [class="", key=0];
+5 -> 154  [class="", key=0];
+5 -> 155  [class="", key=0];
+5 -> 156  [class="", key=0];
+5 -> 157  [class="", key=0];
+5 -> 158  [class="", key=0];
+5 -> 159  [class="", key=0];
+5 -> 160  [class="", key=0];
+5 -> 161  [class="", key=0];
+5 -> 162  [class="", key=0];
+5 -> 163  [class="", key=0];
+5 -> 164  [class="", key=0];
+5 -> 165  [class="", key=0];
+5 -> 166  [class="", key=0];
+5 -> 167  [class="", key=0];
+5 -> 168  [class="", key=0];
+5 -> 169  [class="", key=0];
+5 -> 170  [class="", key=0];
+5 -> 171  [class="", key=0];
+5 -> 172  [class="", key=0];
+5 -> 173  [class="", key=0];
+6 -> "-1"  [class="", key=NONE, label=""];
+8 -> "-1"  [class="", key=NONE, label=""];
 10 -> "-1"  [class="", key=NONE, label=""];
-11 -> "-1"  [class="", key=NONE, label=""];
-12 -> 24  [class="", key=0];
-12 -> 25  [class="", key=0];
-12 -> 26  [class="", key=0];
-15 -> "-1"  [class="", key=NONE, label=""];
-18 -> 1  [class="", key=0];
-19 -> 11  [class="", key=0];
-20 -> 2  [class="", key=0];
-21 -> 4  [class="", key=0];
-22 -> 2  [class="", key=0];
-23 -> 10  [class="", key=0];
-24 -> 10  [class="", key=0];
-25 -> 15  [class="", key=0];
-26 -> 11  [class="", key=0];
+12 -> "-1"  [class="", key=NONE, label=""];
+14 -> "-1"  [class="", key=NONE, label=""];
+16 -> "-1"  [class="", key=NONE, label=""];
+18 -> "-1"  [class="", key=NONE, label=""];
+20 -> "-1"  [class="", key=NONE, label=""];
+22 -> "-1"  [class="", key=NONE, label=""];
+24 -> "-1"  [class="", key=NONE, label=""];
+26 -> "-1"  [class="", key=NONE, label=""];
+28 -> "-1"  [class="", key=NONE, label=""];
+30 -> "-1"  [class="", key=NONE, label=""];
+32 -> "-1"  [class="", key=NONE, label=""];
+34 -> "-1"  [class="", key=NONE, label=""];
+36 -> "-1"  [class="", key=NONE, label=""];
+38 -> "-1"  [class="", key=NONE, label=""];
+40 -> "-1"  [class="", key=NONE, label=""];
+42 -> "-1"  [class="", key=NONE, label=""];
+44 -> "-1"  [class="", key=NONE, label=""];
+46 -> "-1"  [class="", key=NONE, label=""];
+50 -> "-1"  [class="", key=NONE, label=""];
+52 -> "-1"  [class="", key=NONE, label=""];
+54 -> "-1"  [class="", key=NONE, label=""];
+56 -> "-1"  [class="", key=NONE, label=""];
+58 -> "-1"  [class="", key=NONE, label=""];
+60 -> "-1"  [class="", key=NONE, label=""];
+62 -> "-1"  [class="", key=NONE, label=""];
+64 -> "-1"  [class="", key=NONE, label=""];
+66 -> "-1"  [class="", key=NONE, label=""];
+68 -> "-1"  [class="", key=NONE, label=""];
+70 -> "-1"  [class="", key=NONE, label=""];
+72 -> "-1"  [class="", key=NONE, label=""];
+74 -> "-1"  [class="", key=NONE, label=""];
+76 -> "-1"  [class="", key=NONE, label=""];
+78 -> "-1"  [class="", key=NONE, label=""];
+80 -> "-1"  [class="", key=NONE, label=""];
+82 -> "-1"  [class="", key=NONE, label=""];
+84 -> "-1"  [class="", key=NONE, label=""];
+86 -> "-1"  [class="", key=NONE, label=""];
+88 -> "-1"  [class="", key=NONE, label=""];
+90 -> "-1"  [class="", key=NONE, label=""];
+94 -> "-1"  [class="", key=NONE, label=""];
+96 -> "-1"  [class="", key=NONE, label=""];
+98 -> "-1"  [class="", key=NONE, label=""];
+100 -> "-1"  [class="", key=NONE, label=""];
+102 -> "-1"  [class="", key=NONE, label=""];
+104 -> "-1"  [class="", key=NONE, label=""];
+106 -> "-1"  [class="", key=NONE, label=""];
+108 -> "-1"  [class="", key=NONE, label=""];
+110 -> "-1"  [class="", key=NONE, label=""];
+112 -> "-1"  [class="", key=NONE, label=""];
+114 -> "-1"  [class="", key=NONE, label=""];
+115 -> 1  [class="", key=0];
+116 -> 3  [class="", key=0];
+117 -> 2  [class="", key=0];
+118 -> 4  [class="", key=0];
+119 -> 6  [class="", key=0];
+120 -> 8  [class="", key=0];
+121 -> 10  [class="", key=0];
+122 -> 12  [class="", key=0];
+123 -> 14  [class="", key=0];
+124 -> 16  [class="", key=0];
+125 -> 18  [class="", key=0];
+126 -> 20  [class="", key=0];
+127 -> 22  [class="", key=0];
+128 -> 24  [class="", key=0];
+129 -> 26  [class="", key=0];
+130 -> 28  [class="", key=0];
+131 -> 30  [class="", key=0];
+132 -> 32  [class="", key=0];
+133 -> 34  [class="", key=0];
+134 -> 36  [class="", key=0];
+135 -> 38  [class="", key=0];
+136 -> 40  [class="", key=0];
+137 -> 42  [class="", key=0];
+138 -> 44  [class="", key=0];
+139 -> 46  [class="", key=0];
+140 -> 2  [class="", key=0];
+141 -> 50  [class="", key=0];
+142 -> 52  [class="", key=0];
+143 -> 54  [class="", key=0];
+144 -> 56  [class="", key=0];
+145 -> 58  [class="", key=0];
+146 -> 60  [class="", key=0];
+147 -> 62  [class="", key=0];
+148 -> 64  [class="", key=0];
+149 -> 66  [class="", key=0];
+150 -> 68  [class="", key=0];
+151 -> 70  [class="", key=0];
+152 -> 72  [class="", key=0];
+153 -> 74  [class="", key=0];
+154 -> 76  [class="", key=0];
+155 -> 78  [class="", key=0];
+156 -> 80  [class="", key=0];
+157 -> 82  [class="", key=0];
+158 -> 84  [class="", key=0];
+159 -> 86  [class="", key=0];
+160 -> 88  [class="", key=0];
+161 -> 90  [class="", key=0];
+162 -> 4  [class="", key=0];
+163 -> 94  [class="", key=0];
+164 -> 96  [class="", key=0];
+165 -> 98  [class="", key=0];
+166 -> 100  [class="", key=0];
+167 -> 102  [class="", key=0];
+168 -> 104  [class="", key=0];
+169 -> 106  [class="", key=0];
+170 -> 108  [class="", key=0];
+171 -> 110  [class="", key=0];
+172 -> 112  [class="", key=0];
+173 -> 114  [class="", key=0];
 }
 `;
     drawGraph(graph);
